@@ -8,6 +8,8 @@
 * Fix Padrino::Reloader with strange constants or paths #565
 * Fix Padrino::Reloader reloading also $LOADED_FEATURES deps
 * Fix Double loading of boot.rb in rake tasks. #560
+* Fix an issue with haml rendering on rubinius
+* Fix an issue with ordered hash on rubinius in our core tests
 
 == 0.9.29
 
